# dims

./: .clang-format  .gitignore  .gitmodules  Avi.cpp  Avi.h  CMakeLists.txt  IO.cpp  README.md  Video.cpp  main.cpp
camera-control/: CameraControll.py  joystick.py  service.py
color-graph/: colors.py
common/: Trigger.py
dims_common/: readme.md  setup.py
dims_common/src/dims_common/: Trigger.py  datacollection.py  trigger.py
dimscommon/: Dockerfile  docker-compose.yml  readme.md  setup.py
dimscommon/docker-config/: schema.sql
dimscommon/src/dimscommon/: datacollection.py  trigger.py
dimscommon/test/: test.py
frame-spliter/: spliter.py
labeling/: Makefile  parse_annotations.py
motion-detect/: CreateDataset.ipynb  CreateDataset.py  CustomAlgorithm.py  CustomAlgorithm.pyx  FileCrawler.py  Makefile  Trigger.py  TriggerInfo.py  analyze.ipynb  analyze.sh  background_elimination.py  basic.code-workspace  collect.py  compare_ufo.ipynb  compile_notebook.sh  create_gifs.py  fitting_line.md  line_fit.ipynb  log.py  main.py  notes.md  preview_result.ipynb  region_props.ipynb  remove_stars.ipynb  requirements.txt  run.sh  setup.py  test.py  testing_common_trigger.ipynb  trigger_to_gif.ipynb  upload_to_db.py  utils.py  xarray.ipynb
motion-detect/notebooks/: kalman_filter.ipynb  scipy_curve_fit_test.ipynb
my_avi_parser/: Avi.cpp  Avi.h  CMakeLists.txt  IO.cpp  IO.h  Matrix.cpp  Matrix.h  Video.h  main.cpp  run.sh
openCL/: CMakeLists.txt  OpenclProgram.cpp  OpenclProgram.h  main.cpp  matrix_add.cl
settings-analysis/: main.py
simplex/: implementing_simplex.ipynb  simplex.py  simplex_python_exmp.ipynb
simplex/python/: implementing_simplex.ipynb  simplex.py  test.py
testing/: Dockerfile  config.ini  docker-compose.yml  gif_server.py
testing/server/: Dockerfile  config.ini  dims-env.yml  gif_server.py  requirements.txt
torch/: create_dataset.py  data.csv  train_classifier.ipynb
utils/: show_img.py
utils/frame_viewer/: README.md  show_frame.py
video_analyzer/: CMakeLists.txt  FrameReader.cpp  FrameReader.h  main.cc  make.sh  show_video.cpp  split_into_ppm.cpp  split_into_raw.cpp
video_analyzer/files/: example_short.avi
video_analyzer/lib/FrameReader/: FrameReader.cpp  FrameReader.h
video_analyzer/lib/SimpleShow/: SImpleShow.cpp  SImpleShow.h
